# HO-SIRR-GUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-plugin.bat
SDKs/: PLACE_SDKS_AND_FRAMEWORKS_HERE__READ_FOR_DETAILS.txt
_HOSIRR_/: HOSIRR.jucer
_HOSIRR_/JuceLibraryCode/: AppConfig.h  JuceHeader.h
_HOSIRR_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RIRview.h  outputCoordsView.cpp  outputCoordsView.h
audio_plugin/: CMakeLists.txt  build-plugin.bat
audio_plugin/_HOSIRR_/: CMakeLists.txt  HOSIRR.jucer
audio_plugin/_HOSIRR_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RIRview.cpp  RIRview.h  outputCoordsView.cpp  outputCoordsView.h
audio_plugin/hosirrlib/src/: hosirr_internal.c  hosirrlib.c
audio_plugin/resources/: HOSIRRLookAndFeel.h  ParameterManager.h
hosirrlib/include/: hosirrlib.h
hosirrlib/src/: hosirr_internal.c  hosirr_internal.h  hosirrlib.c
libs/: CMakeLists.txt
libs/hosirrlib/include/: hosirrlib.h
libs/hosirrlib/src/: hosirr_internal.c  hosirr_internal.h  hosirrlib.c
